kubernetes/wallets/wallets.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallets
  labels:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: wallets
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-microservices
      app.kubernetes.io/component: wallets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: wallets
    spec:
      containers:
        - name: wallets
          image: registry.gitlab.com/alex-gudkov/kubernetes-microservices/wallets:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
            limits:
              memory: 2Gi
              ephemeral-storage: 1Gi
              cpu: 500m
            requests:
              memory: 2Gi
              ephemeral-storage: 1Gi
              cpu: 500m
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
