kubernetes/wallets/wallets.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wallets
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: wallets
spec:
    type: ClusterIP
    selector: 
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: wallets
    ports:
        -   name: port-wallets
            protocol: TCP
            port: 80
            targetPort: port-wallets
